<resources>
    <string name="app_name">CUNetUsage</string>

    <string name="action_settings">Settings</string>

    <string name="username">Net ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating</string>
    <string name="ok">OK</string>

    <string name="title_activity_main">Network Usage</string>
    <string name="fetch_info_error">Failed to load data from the server.</string>

    <string name="total_usage">Total Usage:</string>
    <string name="free_usage">Free Data:</string>
    <string name="billable_usage">Billable Usage:</string>
    <string name="billing_rate">Billing Rate:</string>
    <string name="total_charge">Total Charge:</string>
    <string name="fetching_info">Fetching information</string>
    <string name="session_preferences">com.aqnichol.cunetusage.SESSION_PREFERENCES</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>

    <string name="login_error">Login failed</string>
    <string name="login_incorrect">The credentials you provided were incorrect.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
