<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aqnichol.cunetusage.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_usage"
        android:id="@+id/total_usage_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/total_usage_label"
        android:layout_marginLeft="@dimen/label_padding_left"
        android:id="@+id/total_usage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/total_usage_label"
        android:text="@string/free_usage"
        android:id="@+id/free_usage_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/free_usage_label"
        android:layout_below="@id/total_usage"
        android:layout_marginLeft="@dimen/label_padding_left"
        android:id="@+id/free_usage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/free_usage_label"
        android:text="@string/billable_usage"
        android:id="@+id/billable_usage_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/billable_usage_label"
        android:layout_below="@id/free_usage"
        android:layout_marginLeft="@dimen/label_padding_left"
        android:id="@+id/billable_usage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/billable_usage_label"
        android:text="@string/billing_rate"
        android:id="@+id/billing_rate_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/billing_rate_label"
        android:layout_below="@id/billable_usage"
        android:layout_marginLeft="@dimen/label_padding_left"
        android:id="@+id/billing_rate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/billing_rate_label"
        android:text="@string/total_charge"
        android:id="@+id/total_charge_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/total_charge_label"
        android:layout_below="@id/billing_rate"
        android:layout_marginLeft="@dimen/label_padding_left"
        android:id="@+id/total_charge" />

</RelativeLayout>
