<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.aqnichol.cunetusage.MonthOverview">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <EditText
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:text="@string/fetch_info_error"
        android:textColor="@color/error_color"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_message"
        android:id="@+id/month_main_content"
        android:visibility="gone"
        tools:context="com.aqnichol.cunetusage.MonthView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_usage"
            android:id="@+id/total_usage_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/total_usage_label"
            android:layout_marginStart="@dimen/label_padding_left"
            android:id="@+id/total_usage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_usage_label"
            android:text="@string/free_usage"
            android:id="@+id/free_usage_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/free_usage_label"
            android:layout_below="@id/total_usage"
            android:layout_marginStart="@dimen/label_padding_left"
            android:id="@+id/free_usage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/free_usage_label"
            android:text="@string/billable_usage"
            android:id="@+id/billable_usage_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/billable_usage_label"
            android:layout_below="@id/free_usage"
            android:layout_marginStart="@dimen/label_padding_left"
            android:id="@+id/billable_usage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billable_usage_label"
            android:text="@string/billing_rate"
            android:id="@+id/billing_rate_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/billing_rate_label"
            android:layout_below="@id/billable_usage"
            android:layout_marginStart="@dimen/label_padding_left"
            android:id="@+id/billing_rate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/billing_rate_label"
            android:text="@string/total_charge"
            android:id="@+id/total_charge_label" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/total_charge_label"
            android:layout_below="@id/billing_rate"
            android:layout_marginStart="@dimen/label_padding_left"
            android:id="@+id/total_charge" />

    </RelativeLayout>

</RelativeLayout>
